some small changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="de-CH">
 
 <head>
-	<meta charset="utf-8">
+  <meta charset="utf-8">
+  <title>philippbruhin.ch Super Mario Bros.</title>
   <link href="default.css" rel="stylesheet">
   <link href="Fonts/stylesheet.css" rel="stylesheet">
 	<script src="ui.js"></script>
@@ -23,15 +24,15 @@
   <!-- After the game (retracts as needed) -->
   <div id="after">
   
-    <!-- Level Editor popup -->
+    <!-- Level Editor popup
     <div id="out_editor" class="bar1">
       <div class="label">- Level Editor -</div>
       <div id="in_editor" class="expander"></div>
-    </div>
+    </div> -->
     
     <!-- Level Editor popup -->
     <div id="out_mapselect" class="bar1">
-      <div class="label">- Map Select -</div>
+      <div class="label">- Level wählen -</div>
       <div id="in_mapselect" class="expander"></div>
     </div>
     
