--- a/mario.html
+++ b/mario.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
     <meta charset="utf-8">
-    <title>Full Screen Mario</title>
+    <title>philippbruhin.ch Super Mario Bros.</title>
 
     <link href="mario.css" rel="stylesheet">
     <link href="Fonts/stylesheet.css" rel="stylesheet">
